syntax = "proto3";
package pain.proto.asura;

import "pain/proto/common.proto";

option cc_generic_services = true;

service AsuraService {
    rpc RegisterDeva(RegisterDevaRequest) returns (RegisterDevaResponse);
    rpc ListDeva(ListDevaRequest) returns (ListDevaResponse);
}

message DevaServer {
    UUID id = 1;
    string ip = 2;
    uint32 port = 3;
}

message RegisterDevaRequest {
    repeated DevaServer deva_servers = 1;
}

message RegisterDevaResponse {
    message Result {
        UUID id = 1;
        int32 code = 2;
        string message = 3;
    }

    Header header = 1;
    repeated Result results = 2;
}

message ListDevaRequest {}

message ListDevaResponse {
    Header header = 1;
    repeated DevaServer deva_servers = 2;
}
